# rockset-python-client

./: .gitignore  .openapi-generator-ignore  HISTORY.md  LONG_DESCRIPTION.rst  README.md  WORKSPACE  blah.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.py
.openapi-generator/: FILES
client/: BUILD  README.md  client.py  request.py  setup.py
docs/: APIKeys.md  APIKeysApi.md  AddDocumentsRequest.md  AddDocumentsResponse.md  Alias.md  Aliases.md  AliasesApi.md  ApiKey.md  AsyncQueryOptions.md  AutoScalingPolicy.md  AvroParams.md  AwsAccessKey.md  AwsRole.md  AzEventHubIntegration.md  AzServiceBusIntegration.md  AzureBlobCollectionCreationRequest.md  AzureBlobCollectionCreationRequestAllOf.md  AzureBlobIntegrationCreationRequest.md  AzureBlobStorageCollectionCreationRequest.md  AzureBlobStorageIntegration.md  AzureBlobStorageIntegrationCreationRequest.md  AzureBlobStorageSourceWrapper.md  AzureEventHubsCollectionCreationRequest.md  AzureEventHubsIntegration.md  AzureEventHubsIntegrationCreationRequest.md  AzureEventHubsSourceWrapper.md  AzureServiceBusCollectionCreationRequest.md  AzureServiceBusIntegration.md  AzureServiceBusSourceWrapper.md  BulkStats.md  CancelQueryResponse.md  Cluster.md  Collection.md  CollectionMount.md  CollectionMountResponse.md  CollectionMountStats.md  CollectionStats.md  Collections.md  CollectionsApi.md  CreateAliasRequest.md  (+249 more)
rockset/: __init__.py  api_client.py  configuration.py  document.py  exceptions.py  model_utils.py  query_builder.py  query_paginator.py  rest.py  rockset_client.py
rockset_v2/: __init__.py  api_client.py  configuration.py  document.py  exceptions.py  model_utils.py  query_paginator.py  rest.py  rockset_client.py  value.py
swagger/: modified-openapi.yaml  openapi-generated.yaml
templates/: README.mustache  README_common.mustache  __init__package.mustache  api.mustache  api_client.mustache  api_doc.mustache  api_doc_example.mustache  api_test.mustache  configuration.mustache  exceptions.mustache  expanded_body_param.mustache  model_test.mustache  model_utils.mustache  rest.mustache  rockset_client.mustache
test/: conftest.py  test_add_documents_request.py  test_add_documents_response.py  test_alias.py  test_aliases_api.py  test_api_key.py  test_api_keys_api.py  test_async_query_options.py  test_auto_scaling_policy.py  test_avro_params.py  test_aws_access_key.py  test_aws_role.py  test_az_event_hub_integration.py  test_az_service_bus_integration.py  test_azure_blob_collection_creation_request.py  test_azure_blob_collection_creation_request_all_of.py  test_azure_blob_integration_creation_request.py  test_azure_blob_storage_collection_creation_request.py  test_azure_blob_storage_integration.py  test_azure_blob_storage_integration_creation_request.py  test_azure_blob_storage_source_wrapper.py  test_azure_event_hubs_collection_creation_request.py  test_azure_event_hubs_integration.py  test_azure_event_hubs_integration_creation_request.py  test_azure_event_hubs_source_wrapper.py  test_azure_service_bus_collection_creation_request.py  test_bulk_stats.py  (+254 more)
(+1189 files in other folders)
