[tool.poetry]
name = "rockset-v2-alpha"
version = "0.1.2"
description = "The python client for the Rockset API."
authors = ["Rockset <support@rockset.com>"]
packages = [
    {include = "rockset"}
]
documentation = "https://rockset.com/docs/client/python"
repository = "https://github.com/rockset/rockset-python-client"
readme = "LONG_DESCRIPTION.rst"

[tool.poetry.dependencies]
python = "^3.6"
urllib3 = "^1.25.3"
python_dateutil = "^2.5.3"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
setuptools = "^21.0.0"
openapi-core = "^0.14.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
