[tool.poetry]
name = "rockset"
version = "1.0.0"
description = "The python client for the Rockset API."
authors = ["Rockset <support@rockset.com>"]
packages = [
    {include = "rockset"}
]
documentation = "https://github.com/rockset/rockset-python-client"
repository = "https://github.com/rockset/rockset-python-client"
readme = "LONG_DESCRIPTION.rst"
license = "BSD License"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[tool.poetry.dependencies]
python = "^3.6"
urllib3 = "^1.25.3"
python_dateutil = "^2.5.3"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
setuptools = "^21.0.0"
openapi-core = "^0.14.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"